changing overflow issue with calendly

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -31,7 +31,7 @@
         .calendly{
             .calendlyWidget{
                 // padding-bottom: 6em;
-                overflow: hidden;
+                overflow: hidden !important;
 
             }
         }
